--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles.css">
-    <title>Document</title>
+    <title>High-Tech Background</title>
 </head>
 <body>
     <div class="container">
@@ -17,6 +17,16 @@
         <div class="right bottom"></div>
         <div class="left top"></div>
         <div class="left bottom"></div>
-      </div>
+    </div>
+
+    <!-- YouTube Background Video -->
+    <div class="video-background">
+        <iframe
+            src="https://www.youtube.com/embed/v9Zejteg_jU?autoplay=1&mute=1&loop=1&controls=0&playlist=v9Zejteg_jU&cache_buster=12345"
+            frameborder="0"
+            allow="autoplay; encrypted-media; fullscreen"
+            allowfullscreen
+        ></iframe>
+    </div>
 </body>
 </html>
